--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 I am a PhD candidate in Economics at Bocconi University. 
                             </p>
                             <p>
-                                I am on the job market in 2025-2026.
+                                <span class="font-bold">I am on the job market in 2025-2026.</span>
                             </p>
                         </div>
                     </section>
@@ -274,3 +274,4 @@
     </script>
 </body>
 </html>
+
