--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Iván Jomin Kim Taveras </title>
+    <title>Iván Jomin Kim Taveras - PhD Candidate in Economics</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -64,15 +64,20 @@
         </div>
     </header>
 
+    <!-- Under Construction Banner -->
+    <div class="bg-yellow-300 dark:bg-yellow-800 text-yellow-800 dark:text-yellow-200 text-center py-2 fixed top-16 left-0 right-0 z-10">
+        <p class="font-semibold">🚧 This website is currently under construction. 🚧</p>
+    </div>
+
     <!-- Main Content -->
-    <main class="pt-24 pb-12">
+    <main class="pt-32 pb-12">
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-12">
                 
                 <!-- Left Column: Photo and Info -->
                 <aside class="md:col-span-1">
-                    <div class="sticky top-24">
-                        <img class="rounded-lg shadow-lg w-full h-auto object-cover" src="https://placehold.co/400x400/a0aec0/ffffff?text=Your+Photo" alt="A professional photograph of Your Name" onerror="this.onerror=null;this.src='https://placehold.co/400x400/e2e8f0/4a5568?text=Image+Not+Found';">
+                    <div class="sticky top-32">
+                        <img class="rounded-lg shadow-lg w-full h-auto object-cover" src="https://placehold.co/400x400/a0aec0/ffffff?text=Your+Photo" alt="A professional photograph of Iván Jomin Kim Taveras" onerror="this.onerror=null;this.src='https://placehold.co/400x400/e2e8f0/4a5568?text=Image+Not+Found';">
                         <div class="mt-6">
                             <h2 class="text-2xl font-bold text-gray-900 dark:text-white">Iván Jomin Kim Taveras</h2>
                             <p class="mt-1 text-gray-600 dark:text-gray-400">PhD Candidate in Economics</p>
@@ -96,10 +101,13 @@
                         <h2 class="text-2xl font-bold border-b-2 border-blue-500 pb-2 mb-4 text-gray-900 dark:text-white">About Me</h2>
                         <div id="bio-content" class="space-y-4 text-lg text-gray-700 dark:text-gray-300">
                             <p>
-                                I am a PhD candidate in Economics at Bocconi University. 
+                                I am a PhD candidate in Economics at Bocconi University. My research interests lie at the intersection of <span class="font-semibold">labor economics</span>, <span class="font-semibold">public finance</span>, and <span class="font-semibold">political economy</span>. 
                             </p>
                             <p>
-                                <span class="font-bold">I am on the job market in 2025-2026.</span>
+                                Specifically, I study the impact of minimum wage policies on firm dynamics and the effects of media on political polarization.
+                            </p>
+                            <p class="font-bold">
+                                I am on the job market in 2025-2026.
                             </p>
                         </div>
                     </section>
@@ -145,7 +153,7 @@
     <!-- Footer -->
     <footer class="bg-gray-100 dark:bg-gray-800">
         <div class="max-w-4xl mx-auto py-4 px-4 sm:px-6 lg:px-8 text-center text-gray-500 dark:text-gray-400">
-            <p>&copy; <span id="year"></span> Your Name. Last updated: August 2025.</p>
+            <p>&copy; <span id="year"></span> Iván Jomin Kim Taveras. Last updated: August 2025.</p>
         </div>
     </footer>
 
@@ -170,10 +178,17 @@
     </div>
 
     <script>
-        document.getElementById('year').textContent = new Date().getFullYear();
+        // Wait for the DOM to be fully loaded before running scripts
+        document.addEventListener('DOMContentLoaded', function() {
+            // Set current year in footer
+            document.getElementById('year').textContent = new Date().getFullYear();
 
-        // Attach theme toggle event listener
-        document.getElementById('theme-toggle-btn').addEventListener('click', toggleTheme);
+            // Attach theme toggle event listener
+            const themeToggleButton = document.getElementById('theme-toggle-btn');
+            if (themeToggleButton) {
+                themeToggleButton.addEventListener('click', toggleTheme);
+            }
+        });
 
         // --- Gemini API Integration ---
 
@@ -274,4 +289,3 @@
     </script>
 </body>
 </html>
-
