--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                     View CV
                                 </a>
                                 <a href="mailto:ivan.kimtaveras@unibocconi.it" class="flex items-center text-blue-600 dark:text-blue-400 hover:underline"><svg class="h-5 w-5 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M3 4a2 2 0 00-2 2v1.161l8.441 4.221a1.25 1.25 0 001.118 0L19 7.162V6a2 2 0 00-2-2H3z" /><path d="M19 8.839l-7.77 3.885a2.75 2.75 0 01-2.46 0L1 8.839V14a2 2 0 002 2h14a2 2 0 002-2V8.839z" /></svg>Email</a>
-                                <a href="https://x.com/IvanKimT" target="_blank" class="flex items-center text-blue-600 dark:text-blue-400 hover:underline"><svg class="h-5 w-5 mr-2" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>X Profile</a>
+                                <a href="https://x.com/IvanKimT" target="_blank" class="flex items-center text-blue-600 dark:text-blue-400 hover:underline"><svg class="h-5 w-5 mr-2" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>@IvanKimT</a>
                             </div>
                         </div>
                     </div>
@@ -286,4 +286,5 @@
     </script>
 </body>
 </html>
+
 
