--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iván Jomin Kim Taveras</title>
+    <title> </title>
 
     <!-- Theme configuration -->
     <script>
@@ -24,7 +24,7 @@
 
     <!-- Icon -->
 
-    <link rel="icon" type="image/png" href="/path/to/your-logo.png">
+    <link rel="icon" type="image/png" href="icon.png">
     
     <!-- Google Fonts: Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -297,6 +297,7 @@
     </script>
 </body>
 </html>
+
 
 
 
