--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Icon -->
 
-    <link rel="icon" type="image/png" href="icon.png">
+    <link rel="icon" type="image/png" href="icon.PNG">
     
     <!-- Google Fonts: Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -297,6 +297,7 @@
     </script>
 </body>
 </html>
+
 
 
 
