--- a/index.html
+++ b/index.html
@@ -109,10 +109,13 @@
                         <h2 class="text-2xl font-bold border-b-2 border-blue-500 pb-2 mb-4 text-gray-900 dark:text-white">About Me</h2>
                         <div id="bio-content" class="space-y-4 text-lg text-gray-700 dark:text-gray-300">
                             <p>
-                                My research investigates how vulnerable populations in the developing world are affected by and adapt to the consequences of climate change, with a focus on agriculture and health. 
+                                Hello! I am a development and environmental economist and a Ph.D. candidate in Economics and Finance at Bocconi University. My research focuses on the real-world impacts of climate change on agriculture and health in developing countries.
                             </p>
                             <p>
-                                My Job Market Paper examines how shifts in the timing of the rainy season impact crop yields and household welfare in Sub-Saharan Africa, revealing the limits of low-cost adaptation strategies in the face of informational barriers like false onsets. My research on health connects climate change to human well-being by establishing a causal link between ocean acidification, the viability of small-scale fisheries, and neonatal mortality, quantifying the historical and future health burden of this understudied environmental stressor.
+                                My job market paper investigates how delays in the rainy season impact farmers in six Sub-Saharan African countries. I find that a one-week delay reduces crop yields by approximately 2% and household consumption by 1%. A key challenge is the "false onset" of rains—misleading early rainfall followed by a dry spell—which can trick farmers into planting prematurely and more than doubles the negative economic impact.
+                            </p>
+                            <p>
+                                I have also established a causal link between ocean acidification and human health, showing how increased ocean acidity harms small-scale fisheries, which in turn reduces the consumption of essential nutrients by pregnant women and significantly increases the risk of neonatal mortality.                            
                             </p>
                             <p class="font-bold">
                                 I am on the job market in 2025-2026.
@@ -297,6 +300,7 @@
     </script>
 </body>
 </html>
+
 
 
 
