--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <h2 class="text-2xl font-bold border-b-2 border-blue-500 pb-2 mb-4 text-gray-900 dark:text-white">About Me</h2>
                         <div id="bio-content" class="space-y-4 text-lg text-gray-700 dark:text-gray-300">
                             <p>
-                                Hello! I am a development and environmental economist and a Ph.D. candidate in Economics and Finance at Bocconi University. My research focuses on the real-world impacts of climate change on agriculture and health in developing countries.
+                                Hello! I am a development and environmental economist and a PhD candidate in Economics at Bocconi University. My research focuses on the real-world impacts of climate change on agriculture and health in developing countries.
                             </p>
                             <p>
                                 My job market paper investigates how delays in the rainy season impact farmers in six Sub-Saharan African countries. I find that a one-week delay reduces crop yields by approximately 2% and household consumption by 1%. A key challenge is the "false onset" of rains—misleading early rainfall followed by a dry spell—which can trick farmers into planting prematurely and more than doubles the negative economic impact.
@@ -311,6 +311,7 @@
     </script>
 </body>
 </html>
+
 
 
 
