--- a/index.html
+++ b/index.html
@@ -117,14 +117,25 @@
                     <section id="working-papers">
                         <h2 class="text-2xl font-bold border-b-2 border-blue-500 pb-2 mb-6 text-gray-900 dark:text-white">Working Papers</h2>
                         <div class="space-y-8">
-                            <article id="paper-1">
-                                <h3 class="text-xl font-semibold text-gray-900 dark:text-white">"The Title of Your Amazing Working Paper"</h3>
+                            <article id="RainySeasons">
+                                <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Shifting Seasons: Agricultural Adaptation and Resilience in Africa</h3>
                                 <p class="mt-2 text-gray-700 dark:text-gray-300 paper-abstract">
-                                    This is a brief, one-to-three sentence abstract of your paper. It should clearly state the main research question, the methodology, and the key finding. Keep it concise and impactful.
+                                        This paper investigates how delays in the rainy season onset affect agricultural communities in Sub-Saharan Africa. Using micro-data from six countries, I find a one-week delay reduces crop yields by 2% and consumption by 1% , with vulnerable groups like women farmers being hit the hardest. A key reason for this is an informational challenge: misleading early rains, or false onsets, trick farmers into planting prematurely, which ultimately worsens the negative impact. Because farmers show a persistent failure to adapt to these gradual climatic shifts, the analysis warns that these changes in seasonal timing represent a substantial economic threat for the region's future.                                <div class="mt-3 flex items-center gap-4">
+                                    <a href="https://www.dropbox.com/scl/fi/rea6dz0pppunhtoucta8r/ShiftingSeasons_KimTaveras.pdf?rlkey=wamxke5a33mqole0c05eg66b5&st=ef2v76ib&dl=0" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">Download Paper (PDF)</a>
+                                    <button onclick="getSimplifiedAbstract('paper-1')" class="text-sm text-blue-600 dark:text-blue-400 hover:underline">✨ Explain in simple terms</button>
+                                </div>
+                            </article>
+                             <article id="FSTS">
+                                <h3 class="text-xl font-semibold text-gray-900 dark:text-white">From Sea to Shore: The Impact of Ocean Acidification on Child Health</h3>
+                                <p class="mt-2 text-gray-700 dark:text-gray-300 paper-abstract">
+                                    with <a href="https://alexarmand.org" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Alex Armand</a>
+                                </p>
+                                <p class="mt-2 text-gray-700 dark:text-gray-300 paper-abstract">
+                                    This paper investigates the health consequences of ocean acidification for coastal communities in developing countries that depend on the sea for nutrition. Using data on 1.5 million births across 36 countries, we find that prenatal exposure to a 1% increase in ocean acidity raises the risk of neonatal death by 5%. This effect is driven by maternal malnutrition, as higher acidity harms small-scale fisheries, which raises local seafood prices and reduces the consumption of crucial nutrients by pregnant women. Without intervention, the paper estimates that these impacts could contribute to as many as 77 million neonatal deaths in the studied regions by 2100.                                
                                 </p>
                                 <div class="mt-3 flex items-center gap-4">
                                     <a href="#" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">Download Paper (PDF)</a>
-                                    <button onclick="getSimplifiedAbstract('paper-1')" class="text-sm text-blue-600 dark:text-blue-400 hover:underline">✨ Explain in simple terms</button>
+                                    <button onclick="getSimplifiedAbstract('FSTS')" class="text-sm text-blue-600 dark:text-blue-400 hover:underline">✨ Explain in simple terms</button>
                                 </div>
                             </article>
                         </div>
@@ -296,3 +307,4 @@
     </script>
 </body>
 </html>
+
