--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             <article id="FSTS">
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">From Sea to Shore: The Impact of Ocean Acidification on Child Health</h3>
                                 <p class="mt-2 text-gray-700 dark:text-gray-300">
-                                    with <a href="https://alexarmand.com/" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Alex Armand</a>
+                                    with <a href="https://alexarmand.org/" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Alex Armand</a>
                                 </p>
                                 <p class="mt-2 text-gray-700 dark:text-gray-300 paper-abstract">
                                     This paper investigates the health consequences of ocean acidification for coastal communities in developing countries that depend on the sea for nutrition. Using data on 1.5 million births across 36 countries, we find that prenatal exposure to a 1% increase in ocean acidity raises the risk of neonatal death by 5%. This effect is driven by maternal malnutrition, as higher acidity harms small-scale fisheries, which raises local seafood prices and reduces the consumption of crucial nutrients by pregnant women. Without intervention, the paper estimates that these impacts could contribute to as many as 77 million neonatal deaths in the studied regions by 2100.
@@ -147,10 +147,6 @@
                     <section id="wip">
                         <h2 class="text-2xl font-bold border-b-2 border-blue-500 pb-2 mb-6 text-gray-900 dark:text-white">Work in Progress</h2>
                         <div id="wip-list" class="space-y-6">
-                            <article>
-                                <h3 class="text-xl font-semibold text-gray-900 dark:text-white">The Future Impact of Ocean Acidification on Child Health</h3>
-                                <p class="mt-1 text-gray-600 dark:text-gray-400">with <a href="https://alexarmand.com/" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Alex Armand</a></p>
-                            </article>
                         </div>
                         <div class="mt-6">
                             <button onclick="getResearchIdeas()" class="inline-flex items-center justify-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-gray-600 hover:bg-gray-700 dark:bg-gray-700 dark:hover:bg-gray-600 shadow-sm">
@@ -158,6 +154,27 @@
                             </button>
                         </div>
                     </section>
+
+                    <section id="teaching">
+                        <h2 class="text-2xl font-bold border-b-2 border-blue-500 pb-2 mb-6 text-gray-900 dark:text-white">Teaching</h2>
+                        <div class="space-y-6 text-lg">
+                            <div>
+                                <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Current</h3>
+                                <ul class="list-disc list-inside mt-2 text-gray-700 dark:text-gray-300 space-y-1">
+                                    <li>Microeconomics 101 (Undergraduate, 30065 & 30325)</li>
+                                    <li>Macroeconomics 101 (Undergraduate, 30066 & 30326)</li>
+                                    <li>Econometrics I (PhD, 40270)</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Past</h3>
+                                <ul class="list-disc list-inside mt-2 text-gray-700 dark:text-gray-300 space-y-1">
+                                    <li>Econometrics (Masters, 20203)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </section>
+                    
                 </div>
             </div>
         </div>
@@ -315,3 +332,4 @@
     </script>
 </body>
 </html>
+
