--- a/index.html
+++ b/index.html
@@ -156,20 +156,21 @@
                     </section>
 
                     <section id="teaching">
-                        <h2 class="text-2xl font-bold border-b-2 border-blue-500 pb-2 mb-6 text-gray-900 dark:text-white">Teaching</h2>
+                        <h2 class="text-2xl font-bold border-b-2 border-blue-500 pb-2 mb-6 text-gray-900 dark:text-white">Teaching at Bocconi University</h2>
                         <div class="space-y-6 text-lg">
                             <div>
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Current</h3>
                                 <ul class="list-disc list-inside mt-2 text-gray-700 dark:text-gray-300 space-y-1">
-                                    <li>Microeconomics 101 (Undergraduate, 30065 & 30325)</li>
-                                    <li>Macroeconomics 101 (Undergraduate, 30066 & 30326)</li>
+                                    <li>Microeconomics (Undergraduate, Codes 30065 & 30325)</li>
+                                    <li>Macroeconomics (Undergraduate, Codes 30066 & 30326)</li>
                                     <li>Econometrics I (PhD, 40270)</li>
                                 </ul>
                             </div>
                             <div>
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Past</h3>
                                 <ul class="list-disc list-inside mt-2 text-gray-700 dark:text-gray-300 space-y-1">
-                                    <li>Econometrics (Masters, 20203)</li>
+                                    <li>Introduction to Economics (Summer School 2025)</li>
+                                    <li>Econometrics (Masters, Codes 20203)</li>
                                 </ul>
                             </div>
                         </div>
@@ -332,4 +333,5 @@
     </script>
 </body>
 </html>
+
 
