--- a/index.html
+++ b/index.html
@@ -105,12 +105,6 @@
                             <p class="font-bold">
                                 I am on the job market in 2025-2026.
                             </p>
-                            <p>
-                                My job market paper investigates how delays in the rainy season impact farmers in six Sub-Saharan African countries. I find that a one-week delay reduces crop yields by approximately 2% and household consumption by 1%. A key challenge is the false onset of rains—misleading early rainfall followed by a dry spell—which can trick farmers into planting prematurely and more than doubles the negative economic impact.
-                            </p>
-                            <p>
-                                I have also established a causal link between ocean acidification and human health, showing how increased ocean acidity harms small-scale fisheries, which in turn reduces the consumption of essential nutrients by pregnant women and significantly increases the risk of neonatal mortality.
-                            </p>
                             
                         </div>
                     </section>
@@ -124,7 +118,7 @@
                                     This paper investigates how delays in the rainy season onset affect agricultural communities in Sub-Saharan Africa. Using micro-data from six countries, I find a one-week delay reduces crop yields by 2% and consumption by 1%, with vulnerable groups like women farmers being hit the hardest. A key reason for this is an informational challenge: misleading early rains, or false onsets, trick farmers into planting prematurely, which ultimately worsens the negative impact. Because farmers show a persistent failure to adapt to these gradual climatic shifts, the analysis warns that these changes in seasonal timing represent a substantial economic threat for the region's future.
                                 </p>
                                 <div class="mt-3 flex items-center gap-4">
-                                    <a href="https://www.dropbox.com/scl/fi/4k4yhztsrpnbn3tl3zv8s/ShiftingSeasons_KimTaveras.pdf?rlkey=0ytw24k7vhjo66x9o93x25o4l&dl=0" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">View Paper (PDF)</a>
+                                    <a href="#" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">View Paper (PDF)</a>
                                     <button onclick="getSimplifiedAbstract('RainySeasons')" class="text-sm text-blue-600 dark:text-blue-400 hover:underline">✨ Explain in simple terms</button>
                                 </div>
                             </article>
@@ -333,5 +327,6 @@
     </script>
 </body>
 </html>
+
 
 
