--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
                                 <ul class="list-disc list-inside mt-2 text-gray-700 dark:text-gray-300 space-y-1">
                                     <li>Microeconomics (Undergraduate, Codes 30065 & 30325)</li>
                                     <li>Macroeconomics (Undergraduate, Codes 30066 & 30326)</li>
-                                    <li>Econometrics I (PhD, 40270)</li>
+                                    <li>Econometrics I (PhD, Code 40270)</li>
                                 </ul>
                             </div>
                             <div>
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Past</h3>
                                 <ul class="list-disc list-inside mt-2 text-gray-700 dark:text-gray-300 space-y-1">
                                     <li>Introduction to Economics (Summer School 2025)</li>
-                                    <li>Econometrics (Masters, Codes 20203)</li>
+                                    <li>Econometrics (Masters, Code 20203)</li>
                                 </ul>
                             </div>
                         </div>
@@ -327,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
