--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                 </div>
                                 <div id="FSTS-abstract" class="hidden mt-2">
                                     <p class="text-gray-700 dark:text-gray-300 paper-abstract">
-                                        Since the Industrial Revolution, ocean water acidity has risen by 26% due to anthropogenic emissions—a process known as \textit{ocean acidification}—posing a risk for marine life and the communities depending on it. This paper examines the consequences of ocean acidification for child health, using data from coastal regions in 36 low- and middle-income countries from 1972 to 2018, encompassing 41% of the world’s coastal population.  Leveraging short-term exogenous shifts in ocean acidity near human settlements for identification,  we find that prenatal exposure to higher water acidity significantly raises the risk of death in the first months of life and impacts early childhood development.  We show evidence consistent with these effects being associated with maternal malnutrition,  as increased acidity reduces catches for small-scale fisheries,  increasing seafood prices and reducing consumption of crucial nutrients.  Our findings indicate limited adaptation to these impacts. We estimate that, absent intervention, ocean acidification could contribute to as many as 77 million neonatal deaths in this region by 2100—a consequence that should not be ignored in the projected cost of climate change.                                    </p>
+                                        Since the Industrial Revolution, ocean water acidity has risen by 26% due to anthropogenic emissions—a process known as ocean acidification—posing a risk for marine life and the communities depending on it. This paper examines the consequences of ocean acidification for child health, using data from coastal regions in 36 low- and middle-income countries from 1972 to 2018, encompassing 41% of the world’s coastal population.  Leveraging short-term exogenous shifts in ocean acidity near human settlements for identification,  we find that prenatal exposure to higher water acidity significantly raises the risk of death in the first months of life and impacts early childhood development.  We show evidence consistent with these effects being associated with maternal malnutrition,  as increased acidity reduces catches for small-scale fisheries,  increasing seafood prices and reducing consumption of crucial nutrients.  Our findings indicate limited adaptation to these impacts. We estimate that, absent intervention, ocean acidification could contribute to as many as 77 million neonatal deaths in this region by 2100—a consequence that should not be ignored in the projected cost of climate change.                                    </p>
                                 </div>
                             </article>
                         </div>
@@ -232,4 +232,5 @@
     </script>
 </body>
 </html>
+
 
