--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <div id="wip-list" class="space-y-6">
                             <article>
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">NEW PROJECT</h3>
-                                <p class="mt-1 text-gray-600 dark:text-gray-400">with <a href="https://coauthor.com/" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Co-author</a></p>
+                                <p class="mt-1 text-gray-600 dark:text-gray-400">with <a href="https://coauthor.com/" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">co-author</a></p>
                             </article>
                         </div>
                     </section>
@@ -232,6 +232,7 @@
     </script>
 </body>
 </html>
+
 
 
 
