--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     </script>
 
     <!-- Icon -->
-    <link rel="icon" type="image/png" href="icon.PNG">
+    <link rel="icon" type="image/png" href="icon.PNG">    
+    <meta property="og:image" content="https://ivankimtaveras.github.io/icon.png">
     
     <!-- Google Fonts: Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -232,6 +233,7 @@
     </script>
 </body>
 </html>
+
 
 
 
