--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iván Kim Taveras</title>
 
+    <!-- Social Media Preview Tags (Open Graph) -->
+    <meta property="og:title" content="Iván Jomin Kim Taveras">
+    <meta property="og:description" content="Personal academic website of Iván Jomin Kim Taveras, PhD Candidate in Economics at Bocconi University.">
+    <meta property="og:image" content="https://ivankimtaveras.github.io/icon.png">
+    <meta property="og:url" content="https://ivankimtaveras.github.io/">
+    <meta name="twitter:card" content="summary_large_image">
+    
     <!-- Theme configuration -->
     <script>
       if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
@@ -24,7 +31,6 @@
 
     <!-- Icon -->
     <link rel="icon" type="image/png" href="icon.PNG">    
-    <meta property="og:image" content="https://ivankimtaveras.github.io/icon.png">
     
     <!-- Google Fonts: Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -233,6 +239,7 @@
     </script>
 </body>
 </html>
+
 
 
 
