--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta property="og:title" content="Iván Jomin Kim Taveras">
     <meta property="og:description" content="Personal academic website of Iván Jomin Kim Taveras, PhD Candidate in Economics at Bocconi University.">
     <meta property="og:image" content="https://ivankimtaveras.github.io/icon.png">
+    <meta property="og:image:width" content="512">
+    <meta property="og:image:height" content="512">
     <meta property="og:url" content="https://ivankimtaveras.github.io/">
     <meta name="twitter:card" content="summary_large_image">
     
@@ -239,6 +241,7 @@
     </script>
 </body>
 </html>
+
 
 
 
