--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Social Media Preview Tags (Open Graph) -->
     <meta property="og:title" content="Iván Jomin Kim Taveras">
     <meta property="og:description" content="Personal academic website">
-    <meta property="og:image" content="https://ivankimtaveras.github.io/icon.png">
+    <meta property="og:image" content="https://ivankimtaveras.github.io/icon.PNG">
     <meta property="og:image:width" content="512">
     <meta property="og:image:height" content="512">
     <meta property="og:url" content="https://ivankimtaveras.github.io/">
@@ -241,6 +241,7 @@
     </script>
 </body>
 </html>
+
 
 
 
