--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <article id="RainySeasons">
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Shifting Seasons: Agricultural Adaptation and Resilience in Africa</h3>
                                 <div class="mt-3 flex items-center gap-4">
-                                    <a href="https://www.dropbox.com/scl/fi/rea6dz0pppunhtoucta8r/ShiftingSeasons_KimTaveras.pdf?rlkey=wamxke5a33mqole0c05eg66b5&st=ef2v76ib&dl=0" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">View Paper (PDF)</a>
+                                    <a href="#" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">View Paper (PDF)</a>
                                     <button onclick="toggleVisibility('RainySeasons-abstract', this)" class="text-blue-600 dark:text-blue-400 hover:underline flex items-center font-medium">
                                         Abstract <svg class="h-4 w-4 ml-1 toggle-arrow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" /></svg>
                                     </button>
@@ -241,6 +241,7 @@
     </script>
 </body>
 </html>
+
 
 
 
