--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         </div>
                     </section>
 
-                    ``<section id="wip">
+                    <!--<section id="wip">
                         <h2 class="text-2xl font-bold border-b-2 border-blue-500 pb-2 mb-6 text-gray-900 dark:text-white">Work in Progress</h2>
                         <div id="wip-list" class="space-y-6">
                             <article>
@@ -168,7 +168,7 @@
                                 <p class="mt-1 text-gray-600 dark:text-gray-400">with <a href="https://coauthor.com/" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">co-author</a></p>
                             </article>
                         </div>
-                    </section>``
+                    </section>-->
 
                     <section id="teaching">
                         <div class="flex items-center">
@@ -241,6 +241,7 @@
     </script>
 </body>
 </html>
+
 
 
 
