--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
                     <section id="teaching">
                         <div class="flex items-center">
-                            <h2 class="text-2xl font-bold border-b-2 border-blue-500 pb-2 mb-6 text-gray-900 dark:text-white">Teaching at Bocconi University</h2>
+                            <h2 class="text-2xl font-bold border-b-2 border-blue-500 pb-2 mb-6 text-gray-900 dark:text-white">Teaching</h2>
                             <button onclick="toggleVisibility('teaching-details', this)" class="ml-4 mb-6 p-1 text-gray-600 dark:text-gray-300">
                                 <svg class="h-6 w-6 toggle-arrow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" /></svg>
                             </button>
@@ -241,6 +241,7 @@
     </script>
 </body>
 </html>
+
 
 
 
