--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                             <div>
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Past</h3>
                                 <ul class="list-disc list-inside mt-2 text-gray-700 dark:text-gray-300 space-y-1">
-                                    <li>Introduction to Economics (Summer School 2025)</li>
+                                    <li>Introduction to Economics (Summer School 2025, Code 30747)</li>
                                     <li>Econometrics (Masters, Code 20203)</li>
                                 </ul>
                             </div>
@@ -241,6 +241,7 @@
     </script>
 </body>
 </html>
+
 
 
 
