--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
     </header>
 
     <!-- Under Construction Banner -->
-    <div class="bg-yellow-300 dark:bg-yellow-800 text-yellow-800 dark:text-yellow-200 text-center py-2 fixed top-16 left-0 right-0 z-10">
+    <!--<div class="bg-yellow-300 dark:bg-yellow-800 text-yellow-800 dark:text-yellow-200 text-center py-2 fixed top-16 left-0 right-0 z-10">
         <p class="font-semibold">🚧 This website is currently under construction. 🚧</p>
-    </div>
+    </div>-->
 
     <!-- Main Content -->
     <main class="pt-32 pb-12">
@@ -241,6 +241,7 @@
     </script>
 </body>
 </html>
+
 
 
 
